tests/ui/pattern/usefulness/impl-trait.stderr
error: unreachable pattern
  --> $DIR/impl-trait.rs:17:13
   |
LL |             _ => {}
   |             ^
   |
note: the lint level is defined here
  --> $DIR/impl-trait.rs:5:9
   |
LL | #![deny(unreachable_patterns)]
   |         ^^^^^^^^^^^^^^^^^^^^

error: unreachable pattern
  --> $DIR/impl-trait.rs:31:13
   |
LL |             _ => {}
   |             ^

error: unreachable pattern
  --> $DIR/impl-trait.rs:45:13
   |
LL |             Some(_) => {}
   |             ^^^^^^^

error: unreachable pattern
  --> $DIR/impl-trait.rs:49:13
   |
LL |             _ => {}
   |             ^

error: unreachable pattern
  --> $DIR/impl-trait.rs:59:13
   |
LL |             Some(_) => {}
   |             ^^^^^^^

error: unreachable pattern
  --> $DIR/impl-trait.rs:63:13
   |
LL |             _ => {}
   |             ^

error: unreachable pattern
  --> $DIR/impl-trait.rs:76:9
   |
LL |         _ => {}
   |         ^

error: unreachable pattern
  --> $DIR/impl-trait.rs:86:9
   |
LL |         _ => {}
   |         - matches any value
LL |         Some((a, b)) => {}
   |         ^^^^^^^^^^^^ unreachable pattern

error: unreachable pattern
  --> $DIR/impl-trait.rs:94:13
   |
LL |             _ => {}
   |             ^

error: unreachable pattern
  --> $DIR/impl-trait.rs:105:9
   |
LL |         Some((mut x, mut y)) => {
   |         ^^^^^^^^^^^^^^^^^^^^

error: unreachable pattern
  --> $DIR/impl-trait.rs:124:13
   |
LL |             _ => {}
   |             - matches any value
LL |             Rec { n: 0, w: Some(Rec { n: 0, w: _ }) } => {}
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ unreachable pattern

error: unreachable pattern
  --> $DIR/impl-trait.rs:138:13
   |
LL |             _ => {}
   |             ^

error: unreachable pattern
  --> $DIR/impl-trait.rs:151:13
   |
LL |             _ => {}
   |             ^

error[E0004]: non-exhaustive patterns: type `impl Copy` is non-empty
  --> $DIR/impl-trait.rs:23:11
   |
LL |     match return_never_rpit(x) {}
   |           ^^^^^^^^^^^^^^^^^^^^
   |
   = note: the matched value is of type `impl Copy`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern as shown
   |
LL ~     match return_never_rpit(x) {
LL +         _ => todo!(),
LL +     }
   |

error[E0004]: non-exhaustive patterns: type `T` is non-empty
  --> $DIR/impl-trait.rs:37:11
   |
LL |     match return_never_tait(x) {}
   |           ^^^^^^^^^^^^^^^^^^^^
   |
   = note: the matched value is of type `T`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern as shown
   |
LL ~     match return_never_tait(x) {
LL +         _ => todo!(),
LL +     }
   |

error: aborting due to 15 previous errors

For more information about this error, try `rustc --explain E0004`.
